force-app/main/default/objects/Department__c/fields/Department_Leader__c.field-meta.xml
<CustomField>
    <fullName>Department_Leader__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the designated Dept. Lead.</description>
    <inlineHelpText>Lookup the department leader for this department.</inlineHelpText>
    <label>Department Leader</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Departments</relationshipLabel>
    <relationshipName>Departments</relationshipName>
    <type>Lookup</type>
</CustomField>