force-app/main/default/objects/Department__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Email for the department.</description>
    <inlineHelpText>Enter the email for the department.</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>