force-app/main/default/objects/Department__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Department phone number.</description>
    <inlineHelpText>Enter the phone number for the department.</inlineHelpText>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>